Repaired redo